Bug 235558. Make scrollframes take CSS max-width/max-height into account when they compute their preferred size (by reflowing their scrolled block to width max-width, if appropriate). r+sr=dbaron,a=choffman